ICE-10787 - Mobile showcase working again, it was having trouble with a style change around a forced vertical scrollbar (to prevent view shifting). Also the CSS sheets that used to be declared (somehow automatically) and no longer were have been added back in
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@46066 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/samples/showcase/showcase/src/main/webapp/resources/ice.samples.showcase/demo_template.css
+++ b/trunk/icefaces/samples/showcase/showcase/src/main/webapp/resources/ice.samples.showcase/demo_template.css
@@ -22,7 +22,6 @@
 html {
 	width: 100%;
 	height: 100%;
-	overflow-y: scroll;
 }
 
 body {
